<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/item_student"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    >

    <TextView
        android:text="@string/dialog_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/dialog_cc_student"
        android:hint="@string/dialog_product_name"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/dialog_name_student"
        android:hint="@string/dialog_name_student"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/dialog_lastName_student"
        android:hint="@string/dialog_lastName_student"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/dialog_phone_student"
        android:hint="@string/dialog_phone_student"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <Button
        android:id="@+id/dialog_btn_student"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_btn_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>