<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".HomeFragments">


    <TextView
        android:id="@+id/home_title"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/home_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toStartOf="@+id/home_btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/home_btn_back"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/home_btn_back"
        android:padding="0dp"
        android:textAllCaps="false"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/home_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/home_subtitle"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_title"
        />

    <RelativeLayout
        android:id="@+id/home_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:background="#DDDDDD"
        app:layout_constraintBottom_toTopOf="@+id/home_btn_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_subtitle" />

    <Button
        android:id="@+id/home_btn_time"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/home_btn_time"
        android:textAllCaps="false"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/home_btn_image"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/home_btn_image"
        android:textAllCaps="false"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>