<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingStart="20dp"
    android:paddingEnd="10dp"
    android:background="@drawable/item_student"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/icon_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/svg_icon_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/label_cc_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:text="@string/label_cc_student"
        app:layout_constraintStart_toEndOf="@+id/icon_student"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/cc_student"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/delete_student"
        app:layout_constraintStart_toEndOf="@+id/label_cc_student"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:text="1023953405"
        />

    <TextView
        android:id="@+id/label_name_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/label_name_student"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/icon_student"
        app:layout_constraintTop_toBottomOf="@+id/label_cc_student" />

    <TextView
        android:id="@+id/name_student"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toStartOf="@+id/delete_student"
        app:layout_constraintStart_toEndOf="@+id/label_name_student"
        app:layout_constraintTop_toBottomOf="@+id/cc_student"
        tools:ignore="MissingConstraints"
        tools:text="Michael Ferney"
        />

    <TextView
        android:id="@+id/label_lastName_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/label_lastName_student"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/icon_student"
        app:layout_constraintTop_toBottomOf="@+id/label_name_student" />

    <TextView
        android:id="@+id/lastName_student"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toStartOf="@+id/delete_student"
        app:layout_constraintStart_toEndOf="@+id/label_lastName_student"
        app:layout_constraintTop_toBottomOf="@+id/name_student"
        tools:ignore="MissingConstraints"
        tools:text="Tovar Torres"
        />

    <TextView
        android:id="@+id/label_phone_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/label_phone_student"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/icon_student"
        app:layout_constraintTop_toBottomOf="@+id/label_lastName_student" />

    <TextView
        android:id="@+id/phone_student"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toStartOf="@+id/delete_student"
        app:layout_constraintStart_toEndOf="@+id/label_phone_student"
        app:layout_constraintTop_toBottomOf="@+id/lastName_student"
        tools:ignore="MissingConstraints"
        tools:text="3228453107"
        />

    <ImageView
        android:id="@+id/delete_student"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/svg_delete_item"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>